// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary with 1 expense correctly. 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    ₹245.67
  </h1>
</div>
`;

exports[`Should render ExpensesSummary with multiple expenses correctly. 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    ₹25,478.24
  </h1>
</div>
`;
